# surgical-robot-tremor-compensator-rl

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compare_sac.py  config.yaml  docker-compose.yml  evaluate.py  evaluation_report.json  full_evaluation.py  pyproject.toml  surgical-tremor-rl.md  train.py
.github/workflows/: ci.yml
agents/: reward_model.py  sac_agent.py  sac_custom.py
dashboard/: __init__.py  server.py  visualizer.py
env/: __init__.py  physics_sim.py  surgical_env.py  tremor_generator.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: FeedbackPanel.tsx  FrequencySpectrum.tsx  RewardBreakdown.tsx  SafetyZone.tsx  TrainingMetrics.tsx  TrajectoryPlot.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: metrics.ts
monitoring/: prometheus.yml
safety/: __init__.py  constraints.py
tests/: test_feedback_pipeline.py  test_inference_latency.py  test_physics_sim.py  test_reward_function.py  test_reward_model.py  test_sac_custom.py  test_safety_constraints.py  test_signal_processing.py  test_surgical_env.py  test_tremor_generator.py
tests/integration/: test_checkpoint_resume.py  test_evaluation_pipeline.py  test_feedback_pipeline.py  test_safety_modes.py  test_training_loop.py
utils/: logger.py  signal_processing.py
